# foundrai

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  E2E_AUTONOMY_TEST_RESULTS.md  E2E_PROGRESSIVE_TRUST_TEST_RESULTS.md  E2E_REJECTION_TEST_GUIDE.md  E2E_TIMEOUT_TEST_GUIDE.md  E2E_VERIFICATION.md  E2E_VERIFICATION_AGENT_HEALTH.md  E2E_VERIFICATION_GUIDE.md  E2E_VERIFICATION_RECOMMENDATIONS.md  E2E_VERIFICATION_RESULTS.md  Makefile  QUICK_START.md  QUICK_START_E2E.md  README.md  REJECTION_TEST_VERIFICATION.md  SPRINT_COMPARISON_COMPLETE.md  SUBTASK_4-2_VERIFICATION.md  SUBTASK_4_3_VERIFICATION_REPORT.md  UI_VERIFICATION_CHECKLIST.md  VERIFICATION_SUMMARY.md  VISUAL_VERIFICATION_RESULTS.md  docker-compose.yml  e2e-verification.sh  env.example  foundrai.yaml  project_index.json  pyproject.toml  test_progressive_trust_e2e.py  test_trust_mixed_scenarios.py  verify_backend.py  verify_dual_storage.py  verify_e2e.py  verify_integration.py  verify_knowledge_accumulation.py  (+2 more)
.github/workflows/: ci.yml  desktop-release.yml
desktop/: build_sidecar.py  foundrai.spec
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  PHASE0_TECHNICAL_DESIGN.md  PHASE0_TEST_REPORT.md  PHASE1_TECHNICAL_DESIGN.md  PHASE1_TEST_REPORT.md  PHASE2_TECHNICAL_DESIGN.md  PHASE2_TEST_REPORT.md  PHASE3_TECHNICAL_DESIGN.md  PHASE3_TEST_REPORT.md  PHASE4_SUMMARY.md  PHASE4_TECHNICAL_DESIGN.md  PHASE4_TEST_REPORT.md  PRODUCT_VISION.md  RESEARCH.md  ROADMAP.md  TECH_STACK.md  UX_REVIEW.md  V0.2.0_TECHNICAL_DESIGN.md  V0.2.0_TEST_REPORT.md  V0.2.1_TECHNICAL_DESIGN.md  V0.2.1_TEST_REPORT.md  V0.2.2_TECHNICAL_DESIGN.md  V0.2.2_TEST_REPORT.md  V0.2.3_TECHNICAL_DESIGN.md  V0.2.3_TEST_REPORT.md  V0.2.4_TECHNICAL_DESIGN.md  V0.2.4_TEST_REPORT.md  V0.2_UI_FIRST_DESIGN.md
foundrai/: __init__.py  cli.py  config.py  constants.py  desktop_main.py
foundrai/agents/: base.py  context.py  llm.py  roles.py  runtime.py
foundrai/api/: app.py  deps.py
foundrai/integrations/: __init__.py
foundrai/models/: __init__.py  agent_health.py  autonomy_config.py  budget.py  decision_trace.py  enums.py  error_log.py  integration.py  learning.py  message.py  plugin.py  recommendation.py  sprint.py  task.py  team.py  template.py  token_usage.py
foundrai/orchestration/: __init__.py  agent_factory.py  budget_manager.py  ceremonies.py  cost_calculator.py  engine.py  message_bus.py  recommendation_engine.py  task_graph.py
frontend/: .verification-passed-tsc  PERFORMANCE_VERIFICATION.md  index.html  package-lock.json  package.json  performance-check.js  vite.config.ts
frontend-legacy/: package-lock.json  package.json  tailwind.config.ts
frontend-old/: index.html
frontend-v2/: package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_budget.py  test_cli.py  test_config.py  test_dual_storage_learnings.py  test_e2e_cost_tracking.py  test_error_store.py  test_integration_sprint.py  test_learning_application_in_planning.py  test_multi_team.py  test_plugin_system.py  test_replay.py  test_retrospective_ui_data.py  test_retry.py  test_sprint_store.py  test_template_system.py  test_token_store.py  test_trace_store.py
(+336 files in other folders)
