[package]
name = "foundrai-desktop"
version = "0.6.0"
description = "FoundrAI Desktop — AI Agent Orchestration Platform"
authors = ["FoundrAI"]
edition = "2021"

[lib]
name = "foundrai_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "foundrai-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
